users can be created

--- a/main/templates/users/base.html
+++ b/main/templates/users/base.html
@@ -49,7 +49,7 @@
             </div>
 
             <footer>
-                <p> UofTHacks VIII 2021 &copy </p>
+                <p> Deltahacks VII 2021 &copy </p>
             </footer>
         
         </div>
