--- a/main/templates/users/index.html
+++ b/main/templates/users/index.html
@@ -11,61 +11,29 @@
 
 {% block body %}
 
-    <div class="bg-1">
-        <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h3>Student Loan Debt Problem in Canada</h3>
-                <p> 
-                    Number of students who are taking student loans are increasing every year. More and more students are graduating with increasing level
-                    of debts and they are struggling to pay it. <br>
-                    
-                </p>
-              </div>
-              <div class="col">
-                <img src="{% static "images/student_debts.jpg" %}" alt="Hi!" width="100%" height="100%" />
-              </div>
-            </div>
-          </div>
+  <div class="bg-4">
+    <div class="title-div">
+      <h2 class="main-title">Track your blood pressure,</h2>
+      <h3 class="secondary-title"> Get instant suggestions,</h3>
+      <h2 class="main-title">Keep in touch with your doctor!</h2>
     </div>
 
-    <div class="bg-2">
-        <div class="container">
-            <div class="row">
-              <div class="col align-self-start">
-                <img src="{% static "images/image4.jpg" %}" alt="Hi!" width="100%" height="70%"/>
-              </div>
-              <div class="col align-self-center">
-                <h3> We can help!</h3>
-                <h5>Our app can help you by:</h5>
-                <br>
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-warning">Tracking your expenses.</li>
-                    <li class="list-group-item list-group-item-primary">Aiding you to split expenses with friends.</li>
-                    <li class="list-group-item list-group-item-secondary">Setting saving goals and meeting them.</li>
-                    <li class="list-group-item list-group-item-success">Budgeting your income.</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        
+    <div class="find-doctor-div">
+      <!-- Add a divisor of some sort here -->
+      <h4>Find your doctor now:</h4>
     </div>
 
-    <div class="bg-3">
-        <div class="container">
-            <div class="row">
-              <div class="col align-self-center">
-                <h3>Take action now! Save money for your future...</h3>
-                <br>
-                <h4>Pay your student loan debt off!</h4>
-                <br>
-                <a href="{% url 'register' %}" class="btn btn-primary btn-lg">Register Now!</a>
-              </div>
-              <div class="col">
-                <img src="{% static "images/image5.jpg" %}" alt="Hi!" width="100%" height="100%" />
-              </div>
-            </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
         </div>
+
+        <div class="col">
+          
+        </div>
+      </div>
     </div>
+  </div>
 
 {% endblock %}
