--- a/main/statics/css/landing.css
+++ b/main/statics/css/landing.css
@@ -15,3 +15,17 @@
     color: black;
     padding: 2%;
 }
+
+.bg-4 {
+    background-color: #56A5B0;
+    color: #F4F9F9;
+}
+
+.bg-5 {
+    background-color: #047972;
+    color: #F4F9F9;
+}
+
+.bg-6 {
+    background-color: #ABC5C7;
+}
