--- a/main/statics/css/base.css
+++ b/main/statics/css/base.css
@@ -36,6 +36,15 @@ footer {
     display: table;
 }
 
+.form-wrapper-90 {
+    /* margin-left: 25%!important; */
+    align-content: center;
+    text-align: center;
+    width: 90%;
+    margin: auto;
+    display: table;
+}
+
 .bg-4 {
     background-color: #006466;
     color: #F4F9F9;
