Input and Charts added to Nav Bar

--- a/main/templates/users/base.html
+++ b/main/templates/users/base.html
@@ -29,6 +29,8 @@
                     <nav>
                         <ul class="nav justify-content-end">
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'index' %}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link text-light" href="{% url 'user_input' %}">User Input</a></li>
+                            <li class="nav-item"><a class="nav-link text-light" href="{% url 'line-chart' %}">Charts</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'login' %}">Login</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'register' %}">Register</a></li>
                             <li class="nav-item"><a class="nav-link disabled text-primary bg-dark">Hello, {{request.user}}</a></li>
