Working doctorpatient system - predashboard

--- a/main/statics/css/base.css
+++ b/main/statics/css/base.css
@@ -24,7 +24,7 @@ footer {
 }
 
 .content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
+    /* padding-bottom: 2.5rem;    Footer height */
 }
 
 .form-wrapper {
