--- a/main/templates/users/base.html
+++ b/main/templates/users/base.html
@@ -26,9 +26,11 @@
         <div class="page-container">
             <div class="content-wrap">
                 <header>
+                    <br>
                     <nav>
                         <ul class="nav justify-content-end">
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'index' %}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link text-light" href="{% url 'dashboard' %}">Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'user_input' %}">User Input</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'line-chart' %}">Charts</a></li>
                             <li class="nav-item"><a class="nav-link text-light" href="{% url 'login' %}">Login</a></li>
@@ -39,6 +41,7 @@
                             {% endif %}
                         </ul>
                     </nav>
+                    <br>
                 </header>
 
                 
