--- a/main/templates/charts/line-chart.html
+++ b/main/templates/charts/line-chart.html
@@ -1,4 +1,5 @@
-{% block content %}
+{% extends 'users/base.html' %}
+{% block body %}
 <canvas id="myChart"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script>
