--- a/main/templates/doctorpatient/patientdashboard.html
+++ b/main/templates/doctorpatient/patientdashboard.html
@@ -1,30 +1,58 @@
 {% extends 'users/base.html' %}
 
 {% block body %}
-    <div class="form-wrapper">
-        <br>
-        <br>
-        PATIENT DASHBOARD
-        <br>
-        <br>
-        YOUR DOCTOR IS: {{doctorName}}
-        <br>
-        <br>
+    <div class="bg-4">
+        <div class="form-wrapper">
+            <br>
+            <br>
+            <h5>YOUR DOCTOR IS: {{doctorName}}</h5>
+            <br>
+            <br>
 
-        <div id="newUserInput">
-            <a class="btn btn-info" href="{% url 'user_input' %}">Enter a New Blood Pressure Measurement</a>
+            <div id="newUserInput">
+                <a class="btn btn-info" href="{% url 'user_input' %}">Enter a New Blood Pressure Measurement</a>
+            </div>
+
+            <br>
+            <div class="bg-white">
+                <canvas class="bg-0" id="myChart"></canvas>
+            </div>
+            
+            <br>
+
+            <div id="seeChart">
+                <a class="btn btn-info" href="{% url 'line-chart' %}">Enlarge Chart</a>
+            </div>
+            
+            <br>
+            
+            <h3 class="main-title text-info">The Last 3 Blood Pressure Measurements</h3>
         </div>
 
         <br>
-        <div>
-            <canvas id="myChart"></canvas>
-        </div>
-        <div id="seeChart">
-            <a class="btn btn-info" href="{% url 'line-chart' %}">Enlarge Chart</a>
-        </div>
 
-        <h3 class="main-title">The Last 3 Blood Pressure Measurements</h3>
+        <div class="form-wrapper-70">
+            <div class="container">
+                <div class="row">
+                    {% for r in records %}
 
+                    
+                    <div class="card bg-success col" style="width: 18rem;">
+                        <div class="card-body bg-success">
+                        <div class="card-header">{{forloop.counter}}) Date: {{r.current_date}}</div>
+                        <ul class = "list-group list-group-flush bg-success">
+                            <li class="list-group-item bg-success">High: {{r.high_blood_pressure}}</li>
+                            <li class="list-group-item bg-success">Low: {{r.low_blood_pressure}}</li>
+                        </ul>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <br>
+            <br>
+        </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script>
